--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,15 +22,26 @@
               <div class="row">
                 <div class="col-md-6">
                   <h1 class="display-4">Task List</h1>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <button class="btn btn-outline-secondary" type="button" id="addTaskBtn">Add Task</button>
+                  <div>
+                    <div class="form-group">
+                    <input id="task-name" class="form-control" placeholder="Note Title" type="text">
+                    <textarea id="task-text" class="form-control" placeholder="Note Text"></textarea>
+                      <select class="custom-select" id="task-day">
+                        <option selected disabled value="">Task Day</option>
+                        <option>Monday</option>
+                        <option>Tuesday</option>
+                        <option>Wednesday</option>
+                        <option>Thursday</option>
+                        <option>Friday</option>
+                        <option>Saturday</option>
+                        <option>Sunday</option>
+                      </select>
                     </div>
-                    <input type="text" id="taskInput" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                    <button type="button" class="btn btn-outline-secondary" id="addTaskBtn">Add Task</button>
                   </div>
-                  <div class="text-center">
+                  <div>
                       <h2>Tasks To Do</h2>
-                      <ul id="tasks" style="list-style-type:none">
+                      <ul id="tasks" style="list-style-type:none;">
                       </ul>
 
                       <h2>Completed Tasks</h2>
