added newTask api post

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,8 +24,8 @@
                   <h1 class="display-4">Task List</h1>
                   <div>
                     <div class="form-group">
-                    <input id="task-name" class="form-control" placeholder="Note Title" type="text">
-                    <textarea id="task-text" class="form-control" placeholder="Note Text"></textarea>
+                    <input id="task-name" class="form-control" data-taskName="taskName" placeholder="Task Title" type="text">
+                    <textarea id="task-text" class="form-control" placeholder="Task Text"></textarea>
                       <select class="custom-select" id="task-day">
                         <option selected disabled value="">Task Day</option>
                         <option>Monday</option>
