--- a/views/task-list.handlebars
+++ b/views/task-list.handlebars
@@ -21,12 +21,14 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Task List</h1>
-              <div class="input-group mb-3">
+              <form>
+              <div class="input-group mb-3">  
                 <div class="input-group-prepend">
                   <button class="btn btn-outline-secondary" type="button" id="button-addon1">Add Task</button>
                 </div>
                 <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
               </div>
+              </form>
             </div>
             <div class="text-center">
 
