--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,20 +47,24 @@
             </ul> --}}
 
             <ul>
-              {{#each task}}
+              {{#each tasks}}
+              {{#dataValues}}
               {{#unless task_complete}}
               {{> taskstatus/taskstatus task_complete=false}}
               {{/unless}}
+              {{/dataValues}}
               {{/each}}
             </ul>
 
             <h2>Completed Tasks</h2>
 
             <ul>
-              {{#each task}}
+              {{#each tasks}}
+              {{#dataValues}}
               {{#if task_complete}}
               {{> taskstatus/taskstatus task_complete=true}}
               {{/if}}
+              {{/dataValues}}
               {{/each}}
             </ul>
 
