--- a/views/partials/taskstatus/taskstatus.handlebars
+++ b/views/partials/taskstatus/taskstatus.handlebars
@@ -1,6 +1,6 @@
 <li>
-    {{id}}. {{task_name}}: {{task_notes}}
-    <button data-id="{{id}}" data-complete="{{task_complete}}" class="button">
-        Complete
+    <p>{{id}}. {{task_name}}     Note: {{task_notes}}</p>
+    <button data-id="{{id}}" class="button">
+       Complete
     </button>
 </li>
