--- a/views/partials/taskstatus/taskstatus.handlebars
+++ b/views/partials/taskstatus/taskstatus.handlebars
@@ -1,6 +1,6 @@
 <li>
     <p>{{id}}. {{task_name}}     Note: {{task_notes}}</p>
-    <button data-id="{{id}}" class="button">
-       Complete
+    <button data-id="{{id}}" data-taskcomplete="{{task_complete}}" class="taskbutton">
+       {{#if task_complete}} Undo {{else}} Complete {{/if}}
     </button>
 </li>
