--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -69,6 +69,40 @@
           </div>
         </div>
       </div>
+      <div class="col-md-6">
+        <h1 class="display-4">Meals</h1>
+        <div>
+          <div class="form-group">
+            <select class="custom-select" id="meal-type">
+              <option selected disabled value="">Meal Type</option>
+              <option>Breakfast</option>
+              <option>Lunch</option>
+              <option>Dinner</option>
+              <option>Snack</option>
+            </select>
+            <select class="custom-select" id="food">
+              <option selected disabled value="">Select Food</option>
+              <option>Apple</option>
+              <option>Banana</option>
+              <option>Cereal</option>
+              <option>Tacos</option>
+              <option>Sandwich</option>
+              <option>Pizza</option>
+              <option>Chocolate</option>
+            </select>
+          </div>
+          <button type="button" class="btn btn-outline-secondary" id="addFoodBtn">Add Food</button>
+        </div>
+        <div>
+          <h2>Meal Plan</h2>
+          <ul id="meal-plan" style="list-style-type:none;">
+            <li>Breakfast</li>
+            <li>Lunch</li>
+            <li>Dinner</li>
+            <li>Snack</li>
+          </ul>
+        </div>
+      </div>
     </div>
 
   </div>
