post newMeal to api-routes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -94,6 +94,16 @@
               <option>Pizza</option>
               <option>Chocolate</option>
             </select>
+            <select class="custom-select" id="meal-day">
+              <option selected disabled value="">Task Day</option>
+              <option>Monday</option>
+              <option>Tuesday</option>
+              <option>Wednesday</option>
+              <option>Thursday</option>
+              <option>Friday</option>
+              <option>Saturday</option>
+              <option>Sunday</option>
+            </select>
           </div>
           <button type="button" class="btn btn-outline-secondary" id="addFoodBtn">Add Food</button>
         </div>
