added href for days of week

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,13 +7,25 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="">Calendar</a>
+        <a class="nav-link" href="/monday">Monday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Task List</a>
+        <a class="nav-link" href="/tuesday">Tuesday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="" target="_blank">Shopping List</a>
+        <a class="nav-link" href="/wednesday">Wednesday</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/thursday">Thursday</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Friday">Friday</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Saturday">Saturday</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Sunday">Sunday</a>
       </li>
     </ul>
   </div>
