--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,25 +7,25 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/monday">Monday</a>
+        <a class="nav-link" href="/landing/monday">Monday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tuesday">Tuesday</a>
+        <a class="nav-link" href="/landing/tuesday">Tuesday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/wednesday">Wednesday</a>
+        <a class="nav-link" href="/landing/wednesday">Wednesday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/thursday">Thursday</a>
+        <a class="nav-link" href="/landing/thursday">Thursday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Friday">Friday</a>
+        <a class="nav-link" href="/landing/Friday">Friday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Saturday">Saturday</a>
+        <a class="nav-link" href="/landing/Saturday">Saturday</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Sunday">Sunday</a>
+        <a class="nav-link" href="/landing/Sunday">Sunday</a>
       </li>
     </ul>
   </div>
