--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="../index.html">Velocity</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand mr-1" href="/landing/"><img src="../assets/img/velocity_logo.png" style="max-width: 220px";>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="/landing/monday">Monday</a>
       </li>
@@ -26,6 +27,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/landing/Sunday">Sunday</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Log Out</a>
       </li>
     </ul>
   </div>
