--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mr-1" href="/landing/"><img src="../assets/img/velocity_logo.png" style="max-width: 220px";>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand mr-1" href="/landing/"><img src="../assets/img/velocity_logo.png" style="max-width: 220px" ;>
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
+  <div id="navbarText" style="float: right">
     <ul class="navbar-nav">
       {{!-- <li class="nav-item">
         <a class="nav-link" href="/landing/monday">Monday</a>
@@ -38,11 +34,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h1 class="display-4">Task List</h1>
+        <h1 class="display-4 vel-text text-center">Task List</h1>
         <div>
-          <div class="form-group">
+          <div class="form-group mb-1">
             <input id="task-name" class="form-control" data-taskName="taskName" placeholder="Task Title" type="text">
-            <textarea id="task-text" class="form-control" placeholder="Task Text"></textarea>
+            <input id="task-text" class="form-control" placeholder="Task Text"></input>
             {{!-- <select class="custom-select" id="task-day">
               <option selected disabled value="">Task Day</option>
               <option>Monday</option>
@@ -59,51 +55,40 @@
         <div>
           <div class="container">
             <div class="row">
-              <h2>Tasks To Do</h2>
+              <h2 class="vel-text mt-4">Tasks To Do</h2>
             </div>
-              {{!-- <ul id="tasks" style="list-style-type:none;">
-              </ul> --}}
-              <div class="row">
-                <ul>
-                  {{#each tasks}}
-                  {{#dataValues}}
-                  {{#unless task_complete}}
-                  {{> taskstatus/taskstatus task_complete=false}}
-                  {{/unless}}
-                                   
-                  {{/dataValues}}
-                  {{/each}}
-                </ul>
+            {{!-- <ul id="tasks" style="list-style-type:none;">
+            </ul> --}}
+            <div class="row">
+              {{#each tasks}}
+              {{#dataValues}}
+              {{#unless task_complete}}
+              {{> taskstatus/taskstatus task_complete=false}}
+              {{/unless}}
+              {{/dataValues}}
+              {{/each}}
+            </div>
 
-              </div>
-
-              <div class="row">
-                <h2>Completed Tasks</h2>
-              </div>
-                <div class="row">
-                  <ul>
-                    {{#each tasks}}
-                    {{#dataValues}}
-                    {{#if task_complete}}
-                    {{> taskstatus/taskstatus task_complete=true}}
-                    {{/if}}
-                    {{/dataValues}}
-                    {{/each}}
-                  </ul>
-
-                </div>
-
-
-              {{!-- <ul id="completed-tasks">
-              </ul> --}}
+            <div class="row">
+              <h2 class="vel-text">Completed Tasks</h2>
+            </div>
+            <div class="row">
+              {{#each tasks}}
+              {{#dataValues}}
+              {{#if task_complete}}
+              {{> taskstatus/taskstatus task_complete=true}}
+              {{/if}}
+              {{/dataValues}}
+              {{/each}}
+            </div>
 
           </div>
         </div>
       </div>
       <div class="col-md-6">
-        <h1 class="display-4">Meals</h1>
+        <h1 class="display-4 vel-text text-center">Meals</h1>
         <div>
-          <div class="form-group">
+          <div class="form-group mb-1">
             <select class="custom-select" id="meal-type">
               <option selected disabled value="">Meal Type</option>
               <option>Breakfast</option>
@@ -128,13 +113,56 @@
           <button type="button" class="btn btn-outline-secondary" id="addFoodBtn">Add Food</button>
         </div>
         <div>
-          <h2>Meal Plan</h2>
-          <ul id="meal-plan" style="list-style-type:none;">
-            <li>Breakfast</li>
-            <li>Lunch</li>
-            <li>Dinner</li>
-            <li>Snack</li>
-          </ul>
+
+          <div class="container">
+            <div class="row">
+              <h2 class="vel-text mt-4">Meal Plan</h2>
+              <div class="card col-md-12 px-0">
+                <div class="card-header">
+                  <h3 style="display:inline;">Breakfast</h3>
+                </div>
+                <div class="card-body">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+            {{!-- <ul id="tasks" style="list-style-type:none;">
+            </ul> --}}
+
+            <div class="row">
+              <div class="card col-md-12 px-0">
+                <div class="card-header">
+                  <h3 style="display:inline;">Lunch</h3>
+                </div>
+                <div class="card-body">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="card col-md-12 px-0">
+                <div class="card-header">
+                  <h3 style="display:inline;">Dinner</h3>
+                </div>
+                <div class="card-body">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="card col-md-12 px-0">
+                <div class="card-header">
+                  <h3 style="display:inline;">Snack</h3>
+                </div>
+                <div class="card-body">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
