--- a/views/partials/meallist/meallist.handlebars
+++ b/views/partials/meallist/meallist.handlebars
@@ -1,7 +1,6 @@
-<li>
-    <p>{{id}}. {{food_id}}     Note: 
-    </p>
-    {{!-- <button data-id="{{id}}" data-taskcomplete="{{task_complete}}" class="taskbutton">
-       {{#if task_complete}} Undo {{else}} Complete {{/if}}
-    </button> --}}
-</li>
+{{!-- <li>
+    <p>{{id}}. {{mealTime}}     Note: {{MealTie}}</p>
+    <button data-id="{{id}}" class="mealButton">
+       {{#if task_complete}} Undo {{else}} Complete {{/if}} --}}
+    {{!-- </button> --}}
+{{!-- </li> --}}
