removed note: from indexhandlebars

--- a/views/partials/taskstatus/taskstatus.handlebars
+++ b/views/partials/taskstatus/taskstatus.handlebars
@@ -6,6 +6,6 @@
         </button>
     </div>
     <div class="card-body">
-        <p>Notes: {{task_notes}}</p>
+        <p>{{task_notes}}</p>
     </div>
 </div>
