--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -122,7 +122,7 @@
                   <h3 style="display:inline;">Breakfast</h3>
                 </div>
                 <div class="card-body">
-                  <p></p>
+                  <p id="mealBreakfast"></p>
                 </div>
               </div>
             </div>
