--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -122,7 +122,10 @@
                   <h3 style="display:inline;">Breakfast</h3>
                 </div>
                 <div class="card-body">
-                  <p id="mealBreakfast"></p>
+                  <ul id="mealBreakfast">
+
+                  </ul>
+                  {{!-- <p id="mealBreakfast"></p> --}}
                 </div>
               </div>
             </div>
@@ -135,7 +138,9 @@
                   <h3 style="display:inline;">Lunch</h3>
                 </div>
                 <div class="card-body">
-                  <p></p>
+                  <ul id="mealLunch">
+
+                  </ul>
                 </div>
               </div>
             </div>
