--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -151,7 +151,9 @@
                   <h3 style="display:inline;">Dinner</h3>
                 </div>
                 <div class="card-body">
-                  <p></p>
+                  <ul id="mealDinner">
+
+                  </ul>
                 </div>
               </div>
             </div>
@@ -162,7 +164,9 @@
                   <h3 style="display:inline;">Snack</h3>
                 </div>
                 <div class="card-body">
-                  <p></p>
+                  <ul id="mealSnack">
+
+                  </ul>
                 </div>
               </div>
             </div>
